<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/cardview_dark_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/cardview_dark_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/create_food"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/food_name"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/protein_g"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_food_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/carbs_g"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_food_carbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/fat_g"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_food_fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/serving_size_g"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_food_serving_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/calories"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@color/purple_200"
            android:id="@+id/food_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/create_food" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>